Revert "- (CRM) Improved responsiveness of New Family block on mobile devices. (Fixes #4700)"
This reverts commit d41ad5ec92775ed9d1ed2e11795e9eb1fecdd73f.

--- a/RockWeb/Styles/_blocks-crm.less
+++ b/RockWeb/Styles/_blocks-crm.less
@@ -1057,7 +1057,7 @@ span.field-value {
   margin-top: 0 !important;
 }
 
-@media (max-width: @screen-md) {
+@media (max-width: @screen-sm) {
   /* Force table to not be like tables anymore */
   table.table-groupmembers,
   .table-groupmembers thead,
@@ -1166,10 +1166,6 @@ span.field-value {
     .pull-right {
       float: none !important;
     }
-  }
-
-  .table-groupmemberattributes {
-    margin-bottom: 12px;
   }
 
   .table-groupcontactinfo {
